# ssd-navigator

./: Cargo.toml  PROCESS.md  README.md  requirements.yaml  skills-lock.json  tasks.yml
doc/: spec.md
src/: api.rs  app.rs  cli.rs  coverage.rs  errors.rs  lib.rs  main.rs  models.rs  parser.rs  scanner.rs  shared_main.rs
tests/: api_tests.rs  cli_tests.rs  coverage_tests.rs  fixture_tests.rs  parser_tests.rs  scanner_tests.rs
tests/fixtures/sample_project/: requirements.yaml  tasks.yaml
tests/fixtures/sample_project/src/: lib.rs
tests/fixtures/sample_project/tests/: lib_test.rs
tests/support/: mod.rs
