[package]
name = "ssd-navigator"
version = "0.1.0"
edition = "2024"
default-run = "ssd-navigator"

[[bin]]
name = "ssd-navigator"
path = "src/main.rs"

[[bin]]
name = "sdd-coverage"
path = "src/bin/sdd-coverage.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
walkdir = "2"
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde_json = "1.0"

[dev-dependencies]
hyper = { version = "0.14", features = ["client", "http1"] }
tower = "0.4"
tempfile = "3"
